--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,15 +13,18 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="/">Home</a>
+					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 							data-bs-toggle="dropdown" aria-expanded="false">
 							About
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<li><a class="dropdown-item" href="#">About MQM</a></li>
-							<li><a class="dropdown-item" href="#">Hornored Work</a></li>
+							<li><a class="dropdown-item" href="/about">About MQM</a></li>
+							<li><a class="dropdown-item" href="/honored_work">Hornored Work</a></li>
 							<li><a class="dropdown-item" href="#">Organize Committee</a></li>
 						</ul>
 					</li>
@@ -53,7 +56,7 @@
 						<a class="nav-link" href="#">Sponsorship</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Covid-19</a>
+						<a class="nav-link" href="#">COVID-19</a>
 					</li>
 				</ul>
 			</div>
