--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,69 +71,22 @@ details {
 	z-index: 2;
 }
 
-.site-header {
-	width: 100%;
-}
-.resource-content {
-	margin-top: 10px;
+.navbar-collapse {
+	justify-content: flex-end;
 }
 
-.social-media-list {
-	display: flex;
-	flex-direction: row;
+.row-heading {
+	text-align: center;
+	margin-bottom: 20px;
 }
 
-.social-media-list li a {
-	border: 0px solid white;
-	padding: 0;
+.hornored_prof {
+	height: 300px;
 }
 
 .fab {
 	font-size: 2rem;
 	color: #ed1c24ff;
-}
-/* Style the tab */
-.tab {
-	overflow: hidden;
-	border: 1px solid #ccc;
-	background-color: #f1f1f1;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-	background-color: inherit;
-	float: left;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	padding: 14px 16px;
-	transition: 0.3s;
-	font-size: 18px;
-	width: 100%;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-	background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-	background-color: #ed1c24ff;
-	color: white;
-}
-
-/* Style the tab content */
-.tabcontent {
-	display: none;
-	padding: 6px 12px;
-	border: 1px solid #ccc;
-	border-top: none;
-	padding: 30px 20px;
-}
-
-.tabcontent {
-	animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
 
 /* Go from zero to full opacity */
