--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #861F41;">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">MQM2022</a>
+			<a class="navbar-brand" href="/">MQM2022</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
 				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
