add plan trip pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
 							<li><a class="dropdown-item" href="/location-direction">Location and Direction</a></li>
 							<li><a class="dropdown-item" href="/schedule">Schedule</a></li>
 							<li><a class="dropdown-item" href="/lodging">Loging</a></li>
-							<li><a class="dropdown-item" href="#">Venue</a></li>
+							<li><a class="dropdown-item" href="/venue">Venue</a></li>
 
 						</ul>
 					</li>
