--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,10 +45,10 @@
 						</ul>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Sponsorship</a>
+						<a class="nav-link" href="/sponsorship">Sponsorship</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">COVID-19</a>
+						<a class="nav-link" href="/covid19">COVID-19</a>
 					</li>
 				</ul>
 			</div>
